[package]
name = "microvilli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "osmosis-client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tonic = "0.7"
tokio = { version = "1.0", features = ["full"] }
prost = "0.10"
prost-types = "0.10"
reqwest = {version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
tonic-build = "0.7"
